internal class AnimationStrings
{
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCelling = "isOnCelling";
    internal static string hasTarget = "hasTarget";
    internal static string canMove = "canMove";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string isAbility = "isAbility";
}